--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -1,14 +1,39 @@
 {
-  "home": {
-    "welcome": "مرحبًا بك في المتجر الإلكتروني المصغر",
-    "description": "تصفح مجموعتنا الواسعة من المنتجات وابحث عن أفضل العروض لك!",
-    "button": "تسوق الآن"
-  },
-  
-  "navbar": {
-  "home": "الرئيسية",
-  "products": "المنتجات",
-  "contact": "تواصل معنا",
-  "cart": "السلة"
-}
+  "WELCOME_TITLE": "مرحبًا بك في NTG-ATS",
+  "WELCOME_MESSAGE": "نظام تتبع طلبات الطلاب المخصص للمؤسسات التعليمية الحديثة",
+  "START_APPLICATION": "ابدأ طلبك الآن",
+  "LANGUAGE": "العربية",
+  "CARD_1_TITLE": "تقديم سهل",
+  "CARD_1_DESC": "عملية تقديم بسيطة وسهلة للطلاب وأولياء الأمور",
+  "CARD_2_TITLE": "إدارة المستندات",
+  "CARD_2_DESC": "رفع المستندات المطلوبة والتحقق منها بشكل آمن",
+  "CARD_3_TITLE": "تتبع فوري",
+  "CARD_3_DESC": "تتبع حالة طلبك مع تحديثات فورية",
+  "CARD_4_TITLE": "دعم ثنائي اللغة",
+  "CARD_4_DESC": "دعم كامل للغتين العربية والإنجليزية",
+  "CTA_TITLE": "هل أنت جاهز للبدء؟",
+  "CTA_SUBTITLE": "انضم إلى آلاف العائلات التي سهّلت عملية تقديم المدارس",
+  "CREATE_ACCOUNT": "أنشئ حسابك الآن",
+  "FOOTER": "© 2024 نظام إدارة المدارس NTG-ATS. جميع الحقوق محفوظة.",
+  "WELCOME_TO": "مرحبًا بك في NTG-ATS",
+  "SYSTEM_NAME": "نظام إدارة المدارس",
+
+  "SIGN_IN": "تسجيل الدخول",
+  "SIGN_IN_TITLE": "قم بتسجيل الدخول إلى حسابك",
+  "SIGN_UP": "إنشاء حساب",
+  "SIGN_UP_TITLE": "إنشاء حساب جديد",
+
+  "EMAIL": "البريد الإلكتروني",
+  "PASSWORD": "كلمة المرور",
+  "FULL_NAME": "الاسم الكامل",
+
+  "ENTER_EMAIL": "أدخل بريدك الإلكتروني",
+  "ENTER_PASSWORD": "أدخل كلمة المرور",
+  "ENTER_NAME": "أدخل اسمك الكامل",
+
+  "SUBMIT_SIGNIN": "تسجيل الدخول",
+  "SUBMIT_SIGNUP": "إنشاء الحساب",
+
+  "REQUIRED_FIELD": "يرجى تعبئة هذا الحقل.",
+  "INVALID_EMAIL": "يرجى إدخال بريد إلكتروني صحيح."
 }
