--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -53,5 +53,16 @@
   "PASSWORDS_DONT_MATCH": "كلمة المرور غير مطابقة",
 
   "FORGOT_PASSWORD": "نسيت كلمة المرور",
-  "ACTIVATE_ACCOUNT":"تفعيل الحساب"
+  "ACTIVATE_ACCOUNT":"تفعيل الحساب",
+  
+  "SUCCESS": "نجحت العملية",
+  "ERROR": "خطأ",
+  "WARNING": "تحذير",
+  "SIGNUP_SUCCESS": "تم إنشاء الحساب بنجاح! يتم الآن التحويل إلى صفحة تسجيل الدخول...",
+  "SIGNUP_FAILED": "فشل في إنشاء الحساب. يرجى المحاولة مرة أخرى.",
+  "LOGIN_SUCCESS": "مرحباً! يتم الآن التحويل إلى لوحة التحكم...",
+  "LOGIN_FAILED": "فشل تسجيل الدخول. يرجى التحقق من بيانات الاعتماد.",
+  "PLEASE_COMPLETE_FORM": "يرجى إكمال جميع الحقول المطلوبة بشكل صحيح.",
+  "SIGNING_UP": "جاري إنشاء الحساب..."
+
 }
