--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -65,6 +65,34 @@
   "PLEASE_COMPLETE_FORM": "Please complete all required fields correctly.",
   "SIGNING_UP": "Creating Account...",
 
+  "USER_INFORMATION": "User Information",
+  "PHONE": "Phone",
+  "JOB_TITLE": "Job Title",
+  "EDIT_PROFILE": "Edit Profile",
+
+  "DASHBOARD": {
+    "USERS": "Users",
+    "CLASSES": "Classes",
+    "TEACHERS": "Teachers",
+    "MANAGEMENTS": "Managements",
+    "USER_GROWTH": "User Growth",
+    "ORDERS_BY_CATEGORY": "Orders by Category",
+    "LATEST_ORDERS": "Latest Orders",
+    "USER_ID": "User ID",
+    "JOB": "Job",
+    "CLASS": "Class",
+    "STATUS": "Status"
+  },
+  "STUDENT_ENROLLMENT_REQUESTS": "Student Enrollment Requests",
+  "USER_ID": "User ID",
+  "STUDENT_NAME": "Student Name",
+  "STUDENT_CODE": "Student Code",
+  "PREVIOUS_CERTIFICATE": "Previous Certificate",
+  "TOTAL_GRADE": "Total Grade",
+  "PATH": "Path",
+  "REGISTRATION_DATE": "Registration Date",
+  "ACTIONS": "Actions",
+  "VIEW_DETAILS": "View Details",
 
   "STUDENT_ENROLLMENT_DETAILS": "Student Enrollment Details",
   "PERSONAL_INFORMATION": "Personal Information",
